BUGFIX: clip to widget and add scrollbar

--- a/client/stylesheets/app.styl
+++ b/client/stylesheets/app.styl
@@ -87,6 +87,8 @@ div.table
   display: flex
   flex-direction: column
   align-items: stretch
+  overflow-x: hidden
+  overflow-y: hidden
   
 .plotMenu
   z-index: 30
@@ -104,6 +106,8 @@ div.table
   height: 100%
   display: flex
   flex-direction: column
+  overflow-y: auto
+  overflow-x: hidden
 
 .widgetView
   position: absolute
